Branding update: Added GMatic icons and updated manifest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,12 @@
+/* global brower */
+
 {
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true,
+        "webextensions": true
     },
     "extends": [
         "standard"
