--- a/manifest.json
+++ b/manifest.json
@@ -39,7 +39,7 @@
     "author": "Team 4ourSe7en",
     "developer": {
         "name": "Team 4ourSe7en",
-        "url": ""
+        "url": "https://github.com/Team-4ourSe7en/4ourSe7en-Thematic"
     },
     "icons": {
         "16": "icons/Groupmatic16.PNG",
